--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ a:visited {
   </header>
   <main>
    <ol class="pages">
-    <li focal="chicken">
-      <a href="chicken/thigh-sauce/">
+    <li focal="test">
+      <a href="test/calculator/">
        thigh in sauce
       </a>
      </li>
