--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
  <head>
   <title>
-   Steren's blog
+   nomicon
   </title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="So many drafts, so few posts">
+  <meta name="description" content="running on empty">
   <meta name="author" content="the hunger autist">
   <link rel="icon" type="image/svg+xml" href="/icon.svg">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:creator" content="@hungerautist">
   <meta name="twitter:title" content="nomicon">
-  <meta name="twitter:description" content="So many drafts, so few posts">
+  <meta name="twitter:description" content="running on empty">
   <!-- <meta name="twitter:image" content="hungerautist.github.io"> -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="nomicon">
-  <meta property="og:description" content="So many drafts, so few posts">
+  <meta property="og:description" content="running on empty">
   <meta property="og:url" content="hungerautist.github.io">
   <!-- <meta property="og:image" content="hungerautist.github.io"> -->
   <script type="application/ld+json">
@@ -25,7 +25,7 @@
     "@type": "Blog",
     "author": "the hunter autist",
     "name": "nomicon",
-    "description": "So many drafts, so few posts"
+    "description": "running on empty"
   }
   </script>
   <style>
