--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ a:visited {
    <ol class="pages">
     <li focal="test">
       <a href="test/calculator/">
-       thigh in sauce
+       calculator
       </a>
      </li>
  
