--- a/test/calculator/index.html
+++ b/test/calculator/index.html
@@ -13,44 +13,24 @@
 </head>
 
 <body>
-	<div>
-		<header id="screen"></header>
-		<table>
-		
-      			<tbody>
-				<tr class="orange">
-					<td onclick="clearScr()">AC</td>
-          				<td onclick="sendNum('*0.01')">%</td>
-          				<td onclick="sendNum('/')">/</td>
-				</tr>
-				<tr class="orange">
-					<td onclick="sendNum('+')">+</td>
-					<td onclick="sendNum('-')">-</td>
-					<td onclick="sendNum('*')">x</td>
-				</tr>
-				<tr>
-			    		<td onclick="sendNum('7')">7</td>
-			    		<td onclick="sendNum('8')">8</td>
-			    		<td onclick="sendNum('9')">9</td>
-				</tr>
-				<tr>
-					<td onclick="sendNum('4')">4</td>
-					<td onclick="sendNum('5')">5</td>
-					<td onclick="sendNum('6')">6</td>
-				</tr>
-				<tr>
-      					<td onclick="sendNum('1')">1</td>
-					<td onclick="sendNum('2')">2</td>
-					<td onclick="sendNum('3')">3</td>
-				</tr>
-				<tr>
-      					<td onclick="sendNum('.')">.</td>
-					<td onclick="sendNum('0')">0</td>
-					<td onclick="equalTo()">=</td>
-				</tr>	
-			</tbody>
-		</table>
-	</div>
+	<section class="spreadsheet">
+		  <table class="spreadsheet__table"
+			 id="table-main">
+			 <thead class="spreadsheet__table--headers"
+				id="table-headers">
+			 </thead>
+			 <tbody class="spreadsheet__table--body"
+				id="table-body">
+			 </tbody>
+		  </table>
+	</section>
+	
+	<section class="spreadsheet-controls">
+		  <button class="reset-btn"
+			  id="reset">
+			  Reset Data
+		  </button>
+	</section>
 </body>
 
 </html>
