--- a/test/calculator/index.html
+++ b/test/calculator/index.html
@@ -12,25 +12,20 @@
 
 </head>
 
-<body>
-	<section class="spreadsheet">
-		  <table class="spreadsheet__table"
-			 id="table-main">
-			 <thead class="spreadsheet__table--headers"
-				id="table-headers">
-			 </thead>
-			 <tbody class="spreadsheet__table--body"
-				id="table-body">
-			 </tbody>
-		  </table>
-	</section>
+
+<section class="spreadsheet">
+	<table class="spreadsheet__table" id="table-main">
+		<thead class="spreadsheet__table--headers" id="table-headers">
+			</thead>
+			<tbody class="spreadsheet__table--body" id="table-body">
+			</tbody>
+	</table>
+</section>
 	
-	<section class="spreadsheet-controls">
-		  <button class="reset-btn"
-			  id="reset">
+<section class="spreadsheet-controls">
+	<button class="reset-btn" id="reset">
 			  Reset Data
-		  </button>
-	</section>
-</body>
+	</button>
+</section>
 
 </html>
