--- a/test/calculator/index.html
+++ b/test/calculator/index.html
@@ -7,7 +7,7 @@
         content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible"
         content="ie=edge">
-  <link rel="stylesheet" href="/style.css" />
+  <!-- <link rel="stylesheet" href="/style.css" /> -->
   <link rel="stylesheet" href="/calc.css" />
     <link rel="shortcut icon"
         href="img/google-sheets-logo-.png"
