--- a/test/calculator/index.html
+++ b/test/calculator/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="/style.css" />
         <link rel="stylesheet" href="/calc.css" />
-        <script src='dndcalc.js'></script>
+        <script src='/calc.js'></script>
         <title>Simple Spreadsheet</title>
     </head>
 
